--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "id": "dev.replugged.ThemeTemplate",
-  "name": "Theme Template",
-  "description": "A theme template",
+  "id": "dev.ryand.DiscordNordic",
+  "name": "Discord Nordic",
+  "description": "Nordic theme for Discord",
   "author": {
-    "name": "replugged",
-    "discordID": "1000992611840049192",
-    "github": "replugged-org"
+    "name": "ryand",
+    "discordID": "660292639412846621",
+    "github": "elementemerald"
   },
-  "version": "1.0.2",
+  "version": "1.0.0",
   "updater": {
     "type": "github",
-    "id": "replugged-org/theme-template"
+    "id": "elementemerald/discord-nordic"
   },
-  "license": "MIT",
+  "license": "CC BY-NC-SA 4.0",
   "type": "replugged-theme",
-  "main": "src/main.css"
+  "main": "src/main.scss"
 }
