--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "theme-template",
-  "version": "1.0.0",
-  "description": "A theme template",
+  "name": "discord-nordic",
+  "version": "1.0.1",
+  "description": "Replugged (rewrite) nordic theme",
   "engines": {
     "node": ">=14.0.0"
   },
   "scripts": {
-    "build": "tsx scripts/build.ts",
-    "watch": "tsx scripts/build.ts --watch",
-    "bundle": "tsx scripts/bundle.ts",
+    "build": "replugged build theme",
+    "watch": "replugged build theme --watch",
+    "bundle": "replugged bundle theme",
     "build-and-bundle": "NO_INSTALL=true pnpm run build && pnpm run bundle",
-    "lint": "prettier ./src ./scripts --check",
-    "lint:fix": "prettier ./src ./scripts --write"
+    "lint": "prettier ./src --check",
+    "lint:fix": "prettier ./src --write"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "elementemerald",
   "devDependencies": {
-    "@electron/asar": "^3.2.1",
-    "@parcel/config-default": "^2.8.2",
-    "@parcel/core": "^2.8.2",
-    "@parcel/transformer-sass": "^2.8.2",
+    "@parcel/config-default": "^2.8.3",
+    "@parcel/core": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
     "@types/node": "^18.11.15",
     "parcel": "^2.8.2",
     "prettier": "^2.8.1",
-    "replugged": "4.0.0-beta0.17",
+    "replugged": "4.0.0-beta0.26",
     "tsx": "^3.12.1"
   }
 }
