--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,5 @@
   },
   "license": "CC BY-NC-SA 4.0",
   "type": "replugged-theme",
-  "main": "src/global.scss"
+  "main": "src/_imports.scss"
 }
