--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-nordic",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Replugged (rewrite) nordic theme",
   "engines": {
     "node": ">=14.0.0"
@@ -14,7 +14,7 @@
     "lint:fix": "prettier ./src --write"
   },
   "keywords": [],
-  "author": "elementemerald",
+  "author": "ryand",
   "devDependencies": {
     "@parcel/config-default": "^2.8.3",
     "@parcel/core": "^2.8.3",
@@ -22,7 +22,7 @@
     "@types/node": "^18.11.15",
     "parcel": "^2.8.2",
     "prettier": "^2.8.1",
-    "replugged": "4.0.0-beta0.26",
+    "replugged": "4.0.0-rc.1",
     "tsx": "^3.12.1"
   }
 }
